[package]
name = "competitive_programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "two_sum"
path = "src/two_sum/main.rs"

[[bin]]
name = "arranging_coins"
path = "src/arranging_coins/main.rs"

[dependencies]
